--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" type="text/css" href="style.css"/>
+<head>
+    <title>MeetUp</title>
+</head>
 <body>
-
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
+<div class="header">
+    <h1>MeetUp</h1>
+    <p>Find availabilites with your co-workers or friends within a click!</p>
+</div>
 
 </body>
 </html>
