--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="style.css"/>
-<head>
-    <title>MeetUp</title>
-</head>
-<body>
-<div class="header">
-    <h1>MeetUp</h1>
-    <p>Find availabilites with your co-workers or friends within a click!</p>
-</div>
-
-</body>
+    <head>
+        <title>MeetUp</title>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Oleo+Script" rel="stylesheet">
+    </head>
+    <body>
+        <div id="container">
+            <div id="header">
+                <h1>MeetUp</h1>
+                <p>Find availabilities with your co-workers or friends within a click!</p>
+            </div>
+            <div id="content">
+            </div>
+            <div id="footer">
+                </p>Made by Tianwei Ding and Janssen Qu</p>
+                </p>For PennAppsXXII</p> 
+            </div>
+        </div>
+    </body>
 </html>
 
