--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <form>
                     
                 <div class="form-group">
-                    <label for="exampleFormControlSelect1">Example select</label>
-                    <select class="form-control" id="exampleFormControlSelect1">
+                    <label for="availabilitiesSelect">How long will your meet up be?</label>
+                    <select class="form-control" id="availabilitiesSelect">
                       <option>30 min</option>
                       <option>1h</option>
                       <option>1h30min</option>
@@ -46,7 +46,7 @@
                       <option>8h</option>
                       <option>8h30min</option>
                     </select>
-                  </div>
+                </div>
                 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                     <li class="nav-item" role="presentation">
                       <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Person 1</button>
